--- a/Application/app/src/main/res/values/colors.xml
+++ b/Application/app/src/main/res/values/colors.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <color name="black">#000000</color>
+    <color name="light_grey">#E2E2E2</color>
+    <color name="white">#FFFFFF</color>
+</resources>
