--- a/Application/app/src/main/res/layout/adapter_action_list.xml
+++ b/Application/app/src/main/res/layout/adapter_action_list.xml
@@ -3,4 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:text="ACTION"/>
+
 </LinearLayout>
