--- a/Application/app/src/main/res/layout/adapter_command_list.xml
+++ b/Application/app/src/main/res/layout/adapter_command_list.xml
@@ -3,4 +3,50 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="45"
+            android:background="@color/light_grey">
+            <TextView
+                android:id="@+id/action"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="ACTION"
+                android:textSize="25sp"
+                android:layout_margin="10dp"
+                android:textStyle="bold"
+                android:gravity="center" />
+        </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/command"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="45"
+            android:text="Vocal command"
+            android:textSize="20sp"
+            android:layout_margin="10dp"
+            android:gravity="center" />
+
+        <ImageView
+            android:id="@+id/remove"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="10"
+            android:src="@drawable/cross"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/black"/>
+
 </LinearLayout>
