--- a/Application/app/src/main/res/layout/fragment_add_command.xml
+++ b/Application/app/src/main/res/layout/fragment_add_command.xml
@@ -1,6 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" android:layout_margin="20dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/vocal_command_definition"
+        android:textSize="25sp"
+        android:gravity="center"
+        />
+
+    <EditText
+        android:id="@+id/command_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <Button
+        android:id="@+id/speak_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:text="@string/speak"
+        />
+
+    <TextView
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/select_action"
+        android:textSize="25sp"
+        android:gravity="center"
+        />
+
+    <TextView
+        android:id="@+id/define_action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/none"
+        android:background="@drawable/grey_border"
+        android:textSize="30sp"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        />
+
+    <Button
+        android:id="@+id/associate_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="40dp"
+        android:text="@string/associate"
+        />
 
 </LinearLayout>
