--- a/Application/app/src/main/res/values/styles.xml
+++ b/Application/app/src/main/res/values/styles.xml
@@ -1,8 +1,13 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
+    <!--
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    </style>
+    -->
+
+    <style name="AppTheme" parent="android:Theme.Holo.Light">
     </style>
 
 </resources>
