--- a/Application/app/src/main/res/drawable/myshape.xml
+++ b/Application/app/src/main/res/drawable/myshape.xml
@@ -2,14 +2,17 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <stroke
-        android:width="2dp"
-        android:color="#FFFFFFFF" />
+    <!--<stroke-->
+        <!--android:width="2dp"-->
+        <!--android:color="#FFFFFFFF" />-->
 
     <gradient
-        android:angle="225"
-        android:endColor="#DD2ECCFA"
-        android:startColor="#DD000000" />
+        android:angle="90"
+        android:centerColor="#BDC3C7"
+        android:endColor="#DADFE1"
+        android:startColor="#DADFE1"
+        android:type="linear" />
+    <stroke android:width="1dp" android:color="#ABB7B7" />
 
     <corners
         android:bottomLeftRadius="7dp"
